--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -96,9 +96,6 @@ menu:
   tags: /tags/ || tags
   categories: /categories/ || th
   archives: /archives/ || archive
-  schedule: /schedule/ || calendar
-  sitemap: /sitemap.xml || sitemap
-  something: /something
   about: /about/
 
 # Enable/Disable menu icons.
@@ -378,12 +375,12 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
 valine:
-  enable: false
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true
+  appid: sg0oCMtOPKtUAsB9Dndyqxie-gzGzoHsz
+  appkey: sBQcbaSkGu7h0pXF0I66Gt2N
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
-  placeholder: Just go go # comment box placeholder
+  placeholder: 来啊！吐槽啊~
   avatar: mm # gravatar style
   guest_info: nick,mail,link # custom comment header
   pageSize: 10 # pagination size
@@ -604,7 +601,7 @@ algolia_search:
 # Local search
 # Dependencies: https://github.com/flashlab/hexo-generator-search
 local_search:
-  enable: false
+  enable: true
   # if auto, trigger search by changing input
   # if manual, trigger search by pressing enter key or search button
   trigger: auto
@@ -808,6 +805,7 @@ vendors:
 css: css
 js: js
 images: images
+
 
 # Theme version
 version: 5.1.4
