--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -528,9 +528,9 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: sg0oCMtOPKtUAsB9Dndyqxie-gzGzoHsz
+  app_key: sBQcbaSkGu7h0pXF0I66Gt2N
 
 # Another tool to show number of visitors to each article.
 # visit https://console.firebase.google.com/u/0/ to get apiKey and projectId
@@ -692,7 +692,7 @@ pace: false
 pace_theme: pace-theme-minimal
 
 # Canvas-nest
-canvas_nest: false
+canvas_nest: true
 
 # three_waves
 three_waves: false
